# winship_schedule

./: .gitignore  .tool-versions  CLAUDE.md  README.md  REALLY_READ_THE_README.md  TODO.md  date_finders.py  export_to_excel.py  export_winship_schedule_to_google_calender.py  google_calendar_wrapper.py  google_calender.py  print_schedule.py  pyproject.toml  rebalance.py  rebalance2.py  take2.py  take3.py  test_calendar_export_integration.py  test_winship_calendar.py  winship_calendar_core.py  winship_schedule.py
