[tool.poetry]
name = "winship_schedule"
version = "0.1.0"
description = ""
authors = ["Myers Carpenter <myers@maski.org>"]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
openpyxl = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
